Fix logo path in the header, minor wording changes.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,7 +25,7 @@
     </nav>
 
 
-    <p>&copy; AGPL <a href="docs/imprint">Imprint </p>
+    <p>&copy; AGPL <a href="/docs/imprint">Legal</p>
 
   </p>
 
