--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
   <div class="hide-sm" id="top">
     <div id="top-brand">
 
-      <a href="/" title="home"> <img alt="Quartermaster Logo" height="100" src="logos/qmstr.png" width="100"></a>
+      <a href="/" title="home"> <img alt="Quartermaster Logo" height="100" src="/logos/qmstr.png" width="100"></a>
     </div>
     <nav id="top-nav-main">
       <ul>
